# cerebro-mcp

./: Cargo.toml
src/: cerebro.rs  main.rs  server.rs
src/cerebro/: cards.rs  packs.rs  sets.rs
